# mpower-mortality-causal-analysis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  LICENSE  README.md  TEST_RESULTS_SUMMARY.md  demo_synthetic_control.py  implementation-summary-advanced-did-methods.md  implementation-summary-cost-effectiveness.md  implementation-summary-policy-optimization.md  implementation-summary-spillover-analysis.md  merge-summary.md  pyproject.toml  test_synthetic_control.py
.claude/: statusline.sh
.claude/agents/: merge-agent.md
.claude/commands/: implement-feature-worktree.md
.serena/: project.yml
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_structure.md  data_structure_overview.md  project_purpose.md  style_conventions.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
PRPs/: initial_mpower.md  mpower_causal_analysis.md
PRPs/ai_docs/: causal_inference_methods.md  data_sources_apis.md  python_packages.md
data/processed/: DATA_PROCESSING_SUMMARY.md
data/raw/worldbank/: combined_downloads_analysis.json  download_analysis_report.json
docs/: EXTENSIONS_GUIDE.md  academic_manuscript.md
docs/features/: advanced-did.md  cost-effectiveness.md  policy-optimization.md  spillover-analysis.md
examples/causal_inference/: advanced_comparison.py  basic_workflow.py
results/: analysis_results.json
results/alternative_treatment/: ALTERNATIVE_TREATMENT_ANALYSIS_SUMMARY.md  alternative_treatment_results.json  manual_did_results.json  treatment_comparison_summary.csv  treatment_comparison_summary.xlsx
results/mechanism_analysis_extension/: mechanism_analysis_results.json  research_extension_summary.md
results/mechanism_demo_test/: analysis_results.json  analysis_summary.xlsx
scripts/: data_processing.py
src/: alternative_treatment_analysis.py  alternative_treatment_robustness.py  debug_event_study.py  debug_fixed_effects.py  demo_mechanism_analysis.py  manual_did_comparison.py  run_comparative_analysis.py  run_full_analysis.py  simple_robustness.py  test_analysis.py  test_event_study_fix.py
src/mpower_mortality_causal_analysis/: analysis.py  comparative_analysis.py
src/mpower_mortality_causal_analysis/causal_inference/: __init__.py
src/mpower_mortality_causal_analysis/causal_inference/data/: __init__.py  preparation.py
src/mpower_mortality_causal_analysis/causal_inference/methods/: __init__.py  callaway_did.py  panel_methods.py  synthetic_control.py
src/mpower_mortality_causal_analysis/causal_inference/utils/: __init__.py  base.py  descriptive.py  event_study.py  mechanism_analysis.py  robustness.py  robustness_comprehensive.py
src/mpower_mortality_causal_analysis/extensions/: __init__.py
src/mpower_mortality_causal_analysis/extensions/advanced_did/: __init__.py  borusyak_imputation.py  dcdh_did.py  diagnostics.py  doubly_robust.py  method_comparison.py  sun_abraham.py
src/mpower_mortality_causal_analysis/extensions/cost_effectiveness/: __init__.py  budget_optimizer.py  ce_pipeline.py  ce_reporting.py  cost_models.py  health_outcomes.py  icer_analysis.py
src/mpower_mortality_causal_analysis/extensions/optimization/: __init__.py  decision_support.py  policy_interactions.py  policy_scheduler.py  political_constraints.py  sequential_optimizer.py
src/mpower_mortality_causal_analysis/extensions/spillover/: __init__.py  border_analysis.py  diffusion_analysis.py  spatial_models.py  spatial_weights.py  spillover_pipeline.py  visualization.py
tests/: conftest.py  test_descriptive.py  test_descriptive_broken.py  test_event_study.py  test_event_study_broken.py  test_mechanism_analysis.py
tests/causal_inference/data/: test_preparation.py
tests/causal_inference/methods/: test_callaway_did.py
tests/extensions/: __init__.py  test_advanced_did.py  test_optimization.py
tests/extensions/cost_effectiveness/: test_cost_effectiveness.py
tests/extensions/spillover/: __init__.py  test_spatial_weights.py  test_spillover_pipeline.py
